--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+
+:root {
+  --font-family-logo: 'Quicksand', sans-serif;
+  --dark-color: #1D1C1A;
+  --white-color: #F6F8FA;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
