Adding MD reader sidebar and navbar

--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,5 +1,5 @@
 .logo-container {
-    display: block;
+    display: inline-block;
     fill: var(--dark-color);
     margin-left: 220px;
     margin-top: 4px;
