--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-
 :root {
   --font-family-logo: 'Quicksand', sans-serif;
+  --font-family-text: 'Quicksand', sans-serif;
+  --font-family-content-text: 'Quicksand', sans-serif;
   --dark-color: #1D1C1A;
   --white-color: #F6F8FA;
+  --blue-color: #A4ECD7;
+  --darker-blue-color: #13B3AC;
 }
 
 body {
