--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -9,16 +9,58 @@
       animation: App-logo-spin infinite 20s linear;
     }
 }
-  
-.App-header {
-    background-color: var(--white-color);
-    min-height: 500vh;
+
+.App {
+  background-color: var(--white-color);
+  top: 0px;
+  position: absolute;
+  width: 100vw;
+}
+
+.content-container {
+  margin-left: 25vw;
+  margin-top: 150px;
+}
+
+.content {
+    min-height: 100vh;
+    width: 48vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: black;
+}
+
+.content h1 {
+  font-size: 42px;
+  font-family: var(--font-family-content-text);
+  margin-top: 50px;
+  margin-bottom: 0px;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: 15px;
+  text-decoration-color: var(--blue-color);
+}
+
+.content p {
+  font-size: 24px;
+  font-family: var(--font-family-content-text);
+  margin-top: 25px;
+  margin-bottom: 0px;
+}
+
+.content ul {
+  list-style: none; /* Remove default bullets */
+}
+
+.content ul li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: var(--blue-color); /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
   
 .App-link {
