Add right side bar

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --font-family-text: 'Quicksand', sans-serif;
   --font-family-content-text: 'Quicksand', sans-serif;
   --dark-color: #1D1C1A;
+  --light-gray: #909090;
   --white-color: #F6F8FA;
   --blue-color: #A4ECD7;
   --darker-blue-color: #13B3AC;
@@ -17,6 +18,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 code {
