--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -8,7 +8,7 @@
     padding : 15px;
     border : 2px var(--dark-color) dotted;
     border-radius : 15px;
-    transition : background-color ease-in-out 0.2s;
+    transition : background-color ease-in-out 0.2s, color ease-in-out 0.2s;
     color: var(--dark-color);
     background-color: var(--blue-color);
 }
