--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -43,6 +43,13 @@
   text-decoration-color: var(--blue-color);
 }
 
+.content .h1-anchor {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+}
+
 .content p {
   font-size: 24px;
   font-family: var(--font-family-content-text);
