--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -32,6 +32,18 @@
     color: black;
 }
 
+@media only screen and (max-width: 600px) {
+  .content-container {
+    margin-left: 5vw;
+    margin-top: 50px;
+  }
+
+  .content {
+    width: 90vw;
+  }
+}
+
+
 .content h1 {
   font-size: 42px;
   font-family: var(--font-family-content-text);
