--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -9,6 +9,12 @@
     background-color: white;
     border-right: 1px var(--dark-color) solid;
 }
+
+@media only screen and (max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+}
  
 .sidebar--hidden {
     left: -120px;
@@ -38,4 +44,10 @@
 .MuiTreeItem-label {
     font-family: var(--font-family-text) !important;
     font-size: 20px !important;
+}
+
+@media only screen and (min-width: 600px) {
+    .mobile-nav-sidebar {
+        display: none;
+    }
 }
