--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 80vw;
+    width: 20vw;
     height: 100vh;
     padding-left: 10px;
     position: fixed;
@@ -9,10 +9,6 @@
     background-color: white;
     border-right: 1px var(--dark-color) solid;
     z-index: 100;
-}
-
-.sidebar-hidden {
-    left: -110vw;
 }
 
 .contents-heading {
@@ -27,6 +23,14 @@
 }
 
 @media only screen and (max-width: 600px) {
+
+    .sidebar {
+        width: 80vw;
+    }
+
+    .sidebar-hidden {
+        left: -110vw;
+    }    
 
     .sidebar-visible {
         left: 0px;
