Fixing sidebar conditional appear on large screen and showSideBar prop

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -81,4 +81,8 @@
     .sidebar-treeview-container {
         margin-top: 190px;
     }
+    
+    .sidebar-hidden-large-screen {
+        display: none;
+    }
 }
