Adding Ideating page

--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -26,18 +26,14 @@
 .content {
     min-height: 100vh;
     width: 48vw;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    font-size: 10px;
     color: black;
 }
 
 .content h1 {
   font-size: 48px;
   font-family: var(--font-family-content-text);
-  margin-top: 50px;
-  margin-bottom: 0px;
 }
 
 .content h2 {
@@ -49,6 +45,13 @@
   text-decoration-style: solid;
   text-decoration-thickness: 15px;
   text-decoration-color: var(--blue-color);
+}
+
+.content h3 {
+  font-size: 30px;
+  font-family: var(--font-family-content-text);
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
 
 .content .h2-anchor {
