More changes to ideating page

--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -21,6 +21,7 @@
 .content-container {
   margin-left: 25vw;
   margin-top: 150px;
+  padding-bottom: 100px;
 }
 
 .content {
@@ -68,20 +69,22 @@
   margin-bottom: 0px;
 }
 
-.content ul {
-  list-style: none; /* Remove default bullets */
-}
-
-.content ul li::before {
-  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+.content ul li::marker {
   color: var(--blue-color); /* Change the color */
   font-weight: bold; /* If you want it to be bold */
-  display: inline-block; /* Needed to add space between the bullet and the text */
-  width: 1em; /* Also needed for space (tweak if needed) */
-  margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
 
 .content ul li {
+  font-size: 24px;
+  font-family: var(--font-family-content-text);
+}
+
+.content ol li::marker {
+  color: var(--blue-color); /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+}
+
+.content ol li {
   font-size: 24px;
   font-family: var(--font-family-content-text);
 }
