--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -62,6 +62,7 @@
 .MuiTreeItem-label {
     font-family: var(--font-family-text) !important;
     font-size: 20px !important;
+    user-select: none; 
 }
 
 .mobile-nav-sidebar {
