User flow and architectures half, and word counter

--- a/src/pages/landing-page/landing-page.css
+++ b/src/pages/landing-page/landing-page.css
@@ -1,6 +1,7 @@
 .landing-page-container {
     width: 100vw;
     background-color: #EDEDD5;
+    height: 100vh;
 }
 
 .landing-page-head-turner-mobile-image-container {
