--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -99,6 +99,13 @@ code {
   border-radius: 15px;
   margin-top: 36px;
 }
+
+img + em { 
+  text-align: center;
+  display: block;
+  font-weight: bold;
+  font-style: normal;
+}
   
 .App-link {
     color: #61dafb;
